--- a/ecommerce/app/templates/app/products.html
+++ b/ecommerce/app/templates/app/products.html
@@ -8,6 +8,7 @@
       <input type="hidden" name="business" value="santiago.malter-facilitator@gmail.com">
       <input type="hidden" name="currency_code" value="EUR">
       <input type="hidden" name="item_name" value="{{product.name}}">
+      <input type="hidden" name="item_number" value="{{product.id}}">
       <input type="hidden" name="amount" value="{{product.price}}">
       <input type="image" src="http://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
   </form>
